feat(agent): complete milvus rag workflow